--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ html {
     color: #fff;
     max-width: 25em;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     left: 50%;
     transform: translateX(-50%);
   }
